@@ -1,11 +1,11 @@
 #!/bin/sh
 
 echo Cleaning autotools files...
-find -type d -name autom4te.cache -print0 | xargs -0 rm -rf \;
-find -type f \( -name missing -o -name install-sh -o -name mkinstalldirs \
+find . -type d -name autom4te.cache | xargs rm -rf \;
+find . -type f \( -name missing -o -name install-sh -o -name mkinstalldirs \
         -o -name depcomp -o -name ltmain.sh -o -name configure \
         -o -name config.sub -o -name config.guess \
-        -o -name Makefile.in \) -print0 | xargs -0 rm -f
+        -o -name Makefile.in \) | xargs rm -f
 
 rm -f config.sub config.guess aclocal.m4 config.h.in config.rpath
 rm -rf m4
