@@ -1,3 +1,7 @@
+2009-10-04 Lauri Nurmi <lanurmi@iki.fi>
+
+	* Fix autogen.sh to work with non-GNU find and xargs.
+
 2009-10-04 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Do not dereference iterator to map.end(), this does not work with MSVC.
